[package]
name = "heuropt"
version = "0.1.0"
edition = "2024"
description = "A practical Rust toolkit for heuristic single-, multi-, and many-objective optimization."
license = "MIT"
readme = "README.md"

[features]
default = []
serde = ["dep:serde"]
parallel = ["dep:rayon"]

[dependencies]
rand = "0.9"
rand_distr = "0.5"
rayon = { version = "1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
