[package]
name = "heuropt"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
authors = ["Stephen Waits <steve@waits.net>"]
description = "A practical Rust toolkit for heuristic single-, multi-, and many-objective optimization."
license = "MIT"
readme = "README.md"
repository = "https://github.com/swaits/heuropt"
homepage = "https://github.com/swaits/heuropt"
documentation = "https://docs.rs/heuropt"
keywords = ["optimization", "evolutionary", "nsga", "pareto", "moead"]
categories = ["algorithms", "science", "mathematics", "simulation"]

[features]
default = []
serde = ["dep:serde"]
parallel = ["dep:rayon"]

[dependencies]
rand = "0.9"
rand_distr = "0.5"
rayon = { version = "1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
